Added first Dijit onto index.html

--- a/templates/js-module/index.html
+++ b/templates/js-module/index.html
@@ -4,11 +4,10 @@
         <title>TS Diagnostics Test Project</title>
     </head>
     <body>
-        <script src="dojo-release-1.16.0/dojo/dojo.js"></script>
-        <script src="dojo-release-1.16.0/dijit/dijit.js"></script>
-        <script src="./views/controls/ComponentA.js"></script>
+        <script src="dojo/dojo.js"></script>
+        <script src="dijit/dijit.js"></script>
 
-        <div data-dojo-type="/views/controls/ComponentA"></div>
+        <div data-dojo-type="views/controls/ComponentA"></div>
 
         <script>
             require(["dojo/parser", "dojo/domReady!"], parser => {
