Added additional components

--- a/templates/js-module/index.html
+++ b/templates/js-module/index.html
@@ -8,6 +8,10 @@
         <script src="dijit/dijit.js"></script>
 
         <div data-dojo-type="views/controls/ComponentA"></div>
+        <div data-dojo-type="views/controls/ComponentB"></div>
+        <div 
+            data-dojo-type="views/controls/ComponentC"
+            data-dojo-props="content: 'Hello, World'"></div>
 
         <script>
             require(["dojo/parser", "dojo/domReady!"], parser => {
