--- a/templates/js-module/views/controls/ComponentAViewTemplate.html
+++ b/templates/js-module/views/controls/ComponentAViewTemplate.html
@@ -1,4 +1,13 @@
 <div>
-    <button data-dojo-attach-event="onclick: onOkClick">OK</button>
+    <button 
+        class="inc-button" 
+        data-dojo-attach-event="onclick: increment">
+        Increase
+    </button>
     <span data-dojo-attach-point="counter">0</span>
+    <button 
+        class="dec-button"
+        data-dojo-attach-event="onclick: decrement">
+        Decrease
+    </button>
 </div>
