--- a/templates/js-module/index.html
+++ b/templates/js-module/index.html
@@ -7,11 +7,9 @@
         <script src="dojo/dojo.js"></script>
         <script src="dijit/dijit.js"></script>
 
-        <div data-dojo-type="views/controls/ComponentA"></div>
-        <div data-dojo-type="views/controls/ComponentB"></div>
-        <div 
-            data-dojo-type="views/controls/ComponentC"
-            data-dojo-props="content: 'Hello, World'"></div>
+        <div data-dojo-type="views/ViewA_hash_.js"></div>
+        <div data-dojo-type="views/ViewB_hash_.js"></div>
+        <div data-dojo-type="views/ViewC_hash_.js"></div>
 
         <script>
             require(["dojo/parser", "dojo/domReady!"], parser => {
