Added a ProfileColumn component

--- a/frontend/js-module/templates/controls/ProfileColumnTemplate.html
+++ b/frontend/js-module/templates/controls/ProfileColumnTemplate.html
@@ -1,13 +1,16 @@
 <div>
-    <button 
-        class="inc-button" 
-        data-dojo-attach-event="onclick: increment">
-        Increase
-    </button>
-    <span data-dojo-attach-point="counter">0</span>
-    <button 
-        class="dec-button"
-        data-dojo-attach-event="onclick: decrement">
-        Decrease
-    </button>
+    <div class="field-name">Name: ${firstName} ${lastName}</div>
+    <div class="field-age">Age: ${age}</div>
+    <div class="field-school">School: ${school}</div>
+    <div class="field-occupation">Occupation: ${occupation}</div>
+    <div class="field-city">City: ${city}</div>
+    <div class="field-state">State: ${state}</div>
+    <div class="field-country">Country: ${country}</div>
+    <div class="field-address">Address: ${address}</div>
+    <div class="field-gender">Gender: ${gender}</div>
+    <div class="field-birthday">Birthday: ${birthday}</div>
+    <div class="field-hometown">Hometown: ${hometown}</div>
+    <div class="field-phoneNumber">Phone Number: ${phoneNumber}</div>
+    <div class="field-status">Status: ${status}</div>
+    <ul class="friends-list" data-dojo-attach-point="friendsListNode"></ul>
 </div>
