Partially completed bindings from ProfileCollectionViewModel to FieldComponent

--- a/frontend/js-module/templates/controls/ProfileColumnTemplate.html
+++ b/frontend/js-module/templates/controls/ProfileColumnTemplate.html
@@ -1,16 +1,16 @@
 <div>
-    <div class="field-name">Name: ${firstName} ${lastName}</div>
-    <div class="field-age">Age: ${age}</div>
-    <div class="field-school">School: ${school}</div>
-    <div class="field-occupation">Occupation: ${occupation}</div>
-    <div class="field-city">City: ${city}</div>
-    <div class="field-state">State: ${state}</div>
-    <div class="field-country">Country: ${country}</div>
-    <div class="field-address">Address: ${address}</div>
-    <div class="field-gender">Gender: ${gender}</div>
-    <div class="field-birthday">Birthday: ${birthday}</div>
-    <div class="field-hometown">Hometown: ${hometown}</div>
-    <div class="field-phoneNumber">Phone Number: ${phoneNumber}</div>
-    <div class="field-status">Status: ${status}</div>
+    <div class="field-name">Name: ${FirstName} ${LastName}</div>
+    <div class="field-age">Age: ${Age}</div>
+    <div class="field-school">School: ${School}</div>
+    <div class="field-occupation">Occupation: ${Occupation}</div>
+    <div class="field-city">City: ${City}</div>
+    <div class="field-state">State: ${State}</div>
+    <div class="field-country">Country: ${Country}</div>
+    <div class="field-address">Address: ${Address}</div>
+    <div class="field-gender">Gender: ${Gender}</div>
+    <div class="field-birthday">Birthday: ${Birthday}</div>
+    <div class="field-hometown">Hometown: ${Hometown}</div>
+    <div class="field-phoneNumber">Phone Number: ${PhoneNumberCell}</div>
+    <div class="field-status">Status: ${Status}</div>
     <ul class="friends-list" data-dojo-attach-point="friendsListNode"></ul>
 </div>
