--- a/frontend/js-module/templates/PersonalViewTemplate.html
+++ b/frontend/js-module/templates/PersonalViewTemplate.html
@@ -1,5 +1,11 @@
 <div>
     <div 
-        data-dojo-type="views/controls/ProfileColumn">
+        data-dojo-type="views/controls/ProfileColumn"
+        data-dojo-attach-point="profileColumn"
+        data-dojo-props="
+            model: at(this, 'selectedModel').direction(at.from)
+        "
+    >
     </div>
+    <script type="dojo/require">at: "dojox/mvc/at"</script>
 </div>
