Added explicit bindings to set a ProfileColumn control

--- a/frontend/js-module/templates/controls/ProfileColumnTemplate.html
+++ b/frontend/js-module/templates/controls/ProfileColumnTemplate.html
@@ -1,22 +1,68 @@
 <div>
     <div 
         data-dojo-type="views/controls/FieldComponent"
-        data-dojo-props="fieldLabel: 'First Name'"
+        data-dojo-props="fieldLabel: 'Name'"
         data-dojo-attach-point="fieldName">
     </div>
-    <div data-dojo-attach-point="fieldAge">Age:</div>
-    <div data-dojo-attach-point="fieldSchool">School:</div>
-    <div data-dojo-attach-point="fieldOccupation">Occupation:</div>
-    <div data-dojo-attach-point="fieldCity">City:</div>
-    <div data-dojo-attach-point="fieldState">State:</div>
-    <div data-dojo-attach-point="fieldCountry">Country:</div>
-    <div data-dojo-attach-point="fieldAddress">Address:</div>
-    <div data-dojo-attach-point="fieldGender">Gender:</div>
-    <div data-dojo-attach-point="fieldBirthday">Birthday:</div>
-    <div data-dojo-attach-point="fieldHometown">Hometown:</div>
-    <div data-dojo-attach-point="fieldPhoneNumber">Phone Number:</div>
-    <div data-dojo-attach-point="fieldStatus">Status:</div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Age'"
+        data-dojo-attach-point="fieldAge">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'School'"
+        data-dojo-attach-point="fieldSchool">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Occupation'"
+        data-dojo-attach-point="fieldOccupation">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'City'"
+        data-dojo-attach-point="fieldCity">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'State'"
+        data-dojo-attach-point="fieldState">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Country'"
+        data-dojo-attach-point="fieldCountry">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Address'"
+        data-dojo-attach-point="fieldAddress">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Gender'"
+        data-dojo-attach-point="fieldGender">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Birthday'"
+        data-dojo-attach-point="fieldBirthday">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Hometown'"
+        data-dojo-attach-point="fieldHometown">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Phone Number'"
+        data-dojo-attach-point="fieldPhoneNumber">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Status'"
+        data-dojo-attach-point="fieldStatus">
+    </div>
     <ul class="friends-list" data-dojo-attach-point="friendsListNode"></ul>
-
-    <script type="dojo/require">at: "dojox/mvc/at"</script>
 </div>
