Separated PersonalView into a PersonalView and a ProfileView

--- a/frontend/js-module/templates/PersonalViewTemplate.html
+++ b/frontend/js-module/templates/PersonalViewTemplate.html
@@ -1,11 +1,6 @@
 <div>
     <div 
         data-dojo-type="views/controls/ProfileColumn"
-        data-dojo-attach-point="profileColumn"
-        data-dojo-props="
-            model: at(this, 'selectedModel').direction(at.from)
-        "
-    >
+        data-dojo-attach-point="profileColumn">
     </div>
-    <script type="dojo/require">at: "dojox/mvc/at"</script>
 </div>
