--- a/frontend/js-module/templates/ProfileViewTemplate.html
+++ b/frontend/js-module/templates/ProfileViewTemplate.html
@@ -1,3 +1,10 @@
 <div>
-  Hello, world!
+    <div 
+        data-dojo-type="views/controls/ProfileColumn"
+        data-dojo-attach-point="profileColumn">
+    </div>
+    <div 
+      data-dojo-type="./views/PersonalView.js"
+      data-dojo-attach-point="personalView">
+    </div>
 </div>
