Mapped personal and profile ViewModels to Views

--- a/frontend/js-module/templates/PersonalViewTemplate.html
+++ b/frontend/js-module/templates/PersonalViewTemplate.html
@@ -1,6 +1,69 @@
 <div>
     <div 
-        data-dojo-type="views/controls/ProfileColumn"
-        data-dojo-attach-point="profileColumn">
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Name'"
+        data-dojo-attach-point="fieldName">
     </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Age'"
+        data-dojo-attach-point="fieldAge">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'School'"
+        data-dojo-attach-point="fieldSchool">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Occupation'"
+        data-dojo-attach-point="fieldOccupation">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'City'"
+        data-dojo-attach-point="fieldCity">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'State'"
+        data-dojo-attach-point="fieldState">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Country'"
+        data-dojo-attach-point="fieldCountry">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Address'"
+        data-dojo-attach-point="fieldAddress">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Gender'"
+        data-dojo-attach-point="fieldGender">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Birthday'"
+        data-dojo-attach-point="fieldBirthday">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Hometown'"
+        data-dojo-attach-point="fieldHometown">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Phone Number'"
+        data-dojo-attach-point="fieldPhoneNumber">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Status'"
+        data-dojo-attach-point="fieldStatus">
+    </div>
+    <ul class="friends-list" data-dojo-attach-point="friendsListNode"></ul>
 </div>
+    
