--- a/frontend/js-module/templates/controls/ProfileColumnTemplate.html
+++ b/frontend/js-module/templates/controls/ProfileColumnTemplate.html
@@ -41,6 +41,11 @@
     </div>
     <div 
         data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'WorkAddress'"
+        data-dojo-attach-point="fieldWorkAddress">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
         data-dojo-props="fieldLabel: 'Gender'"
         data-dojo-attach-point="fieldGender">
     </div>
@@ -61,8 +66,24 @@
     </div>
     <div 
         data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Phone Number, Business 1'"
+        data-dojo-attach-point="fieldPhoneNumberBusiness1">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'Phone Number, Business 2'"
+        data-dojo-attach-point="fieldPhoneNumberBusiness2">
+    </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
         data-dojo-props="fieldLabel: 'Status'"
         data-dojo-attach-point="fieldStatus">
     </div>
+    <div 
+        data-dojo-type="views/controls/FieldComponent"
+        data-dojo-props="fieldLabel: 'SIN'"
+        data-dojo-attach-point="fieldSIN">
+    </div>
     <ul class="friends-list" data-dojo-attach-point="friendsListNode"></ul>
+    <ul class="friends-list" data-dojo-attach-point="coursesListNode"></ul>
 </div>
