Added StudentView.js to the frontend page

--- a/frontend/js-module/templates/ProfileViewTemplate.html
+++ b/frontend/js-module/templates/ProfileViewTemplate.html
@@ -7,4 +7,12 @@
       data-dojo-type="./views/PersonalView.js"
       data-dojo-attach-point="personalView">
     </div>
+    <div 
+      data-dojo-type="./views/EmployeeView.js"
+      data-dojo-attach-point="employeeView">
+    </div>
+    <div 
+      data-dojo-type="./views/StudentView.js"
+      data-dojo-attach-point="studentView">
+    </div>
 </div>
