frontend/viewmodel-switching - added buttons to change the kind of view in the webpage

--- a/src/frontend/js-module/templates/ProfileViewTemplate.html
+++ b/src/frontend/js-module/templates/ProfileViewTemplate.html
@@ -22,4 +22,22 @@
       data-dojo-type="views/StudentView.js"
       data-dojo-attach-point="studentView">
     </div>
+    <button 
+      data-dojo-type="dijit/form/Button" 
+      data-dojo-attach-point="showPersonalBtn"
+    >
+      Show Personal View
+    </button>
+    <button 
+      data-dojo-type="dijit/form/Button" 
+      data-dojo-attach-point="showEmployeeBtn"
+    >
+      Show Employee View
+    </button>
+    <button 
+      data-dojo-type="dijit/form/Button" 
+      data-dojo-attach-point="showStudentBtn"
+    >
+      Show Student View
+    </button>
 </div>
